--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 [D[D[D[D[D[D[D[D[D?php>    [D[D[D[D[D 
 echo "TEXT"
-[D<[D[D[D[D[D [C[Cp>[D[D[D[Dp>  [D[D[D[D[D[D[D?>   
+samp 
